--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -6,8 +6,15 @@ gem 'capybara', '2.1.0'
 gem 'rails', '4.0.0'
 gem 'bcrypt-ruby', '3.0.1'
 
-# Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+group :development do
+  # Use sqlite3 as the database for Active Record
+  gem 'sqlite3'
+end
+
+group :production do
+  gem 'pg', '0.15.1'
+  gem 'rails_12factor', '0.0.2'
+end
 
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.0'
